<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EC8E9"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_planet"
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_marginBottom="8dp"

                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinnerPlanets"
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="wrap_content"
                android:popupTheme="@style/WhiteSpinnerStyle"
                android:background="@android:drawable/editbox_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Enter_your_weight"
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:id="@+id/Rbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/Kilograms"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pounds"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </RadioGroup>


            <EditText
                android:id="@+id/etWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="No Option Selected"
                android:hint="@string/enter_your_Weight"
                android:textColor="#000000"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:background="@android:drawable/editbox_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Calculate_Weight"
                android:textSize="18sp"
                android:textColor="#333333"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:id="@+id/Rbutton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/Kilograms"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pounds"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnCalcWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="#180C35"
                android:elevation="10dp"
                android:text="@string/Calculate_weight"

                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>